# self-written-neural-network

./: CMakeLists.txt  ConvLayer.cpp  ConvLayer.h  README.md  ReluLayer.cpp  ReluLayer.h  Tensor.cpp  Tensor.h  fullconectLayer.cpp  fullconectLayer.h  init.h  layer.h  main.cpp  maxpooling.cpp  maxpooling.h  tripletlosslayer.cpp  tripletlosslayer.h
